# blacksmith

./: .gitignore  .golangci.yml  BUILD.bazel  LICENSE  Makefile  NOTES.md  README.md  WORKSPACE.bazel  api.go  async.go  binding_credentials_test.go  binding_integration_test.go  bosh.go  bosh_maintenance.go  broker.go  certificates_api.go  certificates_api_test.go  certificates_parser.go  certificates_parser_test.go  cf_manager.go  cf_manager_test.go  cf_registration_api_test.go  claude-swarm.yml  compression.go  compression_test.go  config.go  credential_recovery.go  errors.go  go.mod  go.sum  go_deps.bzl  internal_api.go  logging.go  main.go  manifest.go  manifest_test.go  nogo_config.json  plan_store.go  plan_store_test.go  reconciler_adapter.go  (+13 more)
.github/workflows/: ci.yml  release.yml  test.yml
Godeps/: Godeps.json
blacksmith-0.0.4/: webroot.tar.bz2
bosh/: adapter.go  adapter_test.go  blacksmith  director_adapter.go  director_adapter_test.go  factory.go  logger_adapter.go  pooled_director.go  pooled_director_methods.go  pooled_director_test.go
bosh/ssh/: executor.go  service.go  types.go
ci/: pipeline.yml  release_notes.md  repipe  settings.yml
ci/scripts/: shipit
docs/: broker.md  config.md  reconciler.md  service-instance-management-workflow.md  tls.md  vm-monitor.md
docs/examples/: cf-endpoints.yml
docs/mermaid/: blacksmith-reconciler.mmd
example_templates/redis/small/: plan.yml
internal/adapters/: logger_adapter.go
internal/api/: api.go  integration_test.go
internal/bosh/: adapter.go  adapter_test.go  batch_director.go  director_adapter.go  director_adapter_auth_test.go  director_adapter_test.go  factory.go  pooled_director.go  pooled_director_methods.go  pooled_director_test.go
internal/bosh/ssh/: executor.go  service.go  types.go
internal/broker/: api.go  async.go  binding_credentials_test.go  binding_integration_test.go  broker.go  broker_suite_test.go  rabbitmq_integration_test.go  rabbitmq_race_condition_test.go  rabbitmq_retry_test.go  test_helpers_test.go  valkey.go  valkey_test.go
internal/cf/: client.go  discovery.go  health.go  manager.go  manager_test.go  types.go
internal/compression/: config.go  middleware.go  middleware_test.go
internal/config/: config.go
internal/handlers/blacksmith/: handler.go  handler_test.go
internal/handlers/bosh/: handler.go
internal/handlers/certificates/: handler.go  handler_test.go
internal/handlers/cf/: cf_suite_test.go  endpoints.go  endpoints_simple_test.go  handler.go  registration.go  registration_test.go
internal/handlers/configuration/: handler.go
internal/handlers/deployments/: handler.go  handler_test.go
internal/handlers/instances/: handler.go
internal/handlers/services/: handler.go  services_suite_test.go
internal/handlers/tasks/: constants.go  handler.go  handler_test.go
internal/handlers/upgrade/: handler.go
internal/interfaces/: interfaces.go
internal/manifest/: manifest.go  manifest_test.go
internal/middleware/: logging.go  security.go
internal/planstore/: store.go  store_test.go
internal/recovery/: credential_recovery.go  reconciler_adapter.go  reconciler_adapter_test.go
internal/routing/: router.go
internal/services/: catalog.go  catalog_test.go
internal/services/rabbitmq/: constants.go  plugins_audit.go  plugins_audit_test.go  plugins_executor.go  plugins_executor_test.go  plugins_metadata.go  plugins_metadata_test.go  rabbitmqctl_audit.go  rabbitmqctl_executor.go  rabbitmqctl_metadata.go  ssh_service.go
internal/tls/: tls.go
internal/upgrade/: manager.go  stemcell.go  types.go
internal/vault/: auto_unseal.go  auto_unseal_test.go  cf_registry.go  health.go  operations.go  vault.go  vault_suite_test.go  verify_mount_test.go
internal/vmmonitor/: monitor.go  monitor_404_test.go  monitor_test.go
pkg/certificates/: constants.go  errors.go  fetcher.go  parser.go  parser_test.go  types.go  validator.go
pkg/errors/: errors.go
pkg/http/middleware/: interfaces.go
pkg/http/response/: json.go
pkg/logger/: adapters.go  constants.go  factory.go  logger.go  logger_test.go  migration_helpers.go  standard_log.go
pkg/reconciler/: binding_recovery_test.go  binding_recovery_test.go.backup  blacksmith  config.go  constants.go  credential_populator.go  credential_vcap_recovery.go  credential_vcap_recovery_test.go  deleted_deployments_test.go  get_binding_credentials_test.go  interfaces.go  main_test.go  matcher.go  matcher_test.go  metrics.go  reconciler.go  reconciler_manager_test.go  reconciler_test.go  retry.go  safe_updater.go  scanner.go  scanner_test.go  synchronizer.go  synchronizer_integration_test.go  synchronizer_simple_test.go  synchronizer_sync_test.go  synchronizer_vault_io_test.go  test_mocks.go  test_mocks_internal_test.go  test_vault_adapter_test.go  updater.go  updater_broker_reconstruct_test.go  updater_index_test.go  updater_test.go  worker_pool.go
pkg/services/: manager.go  manager_test.go  middleware.go
pkg/services/cf/: auth.go  client.go  constants.go  operations.go  types.go  types_test.go
pkg/services/common/: constants.go  errors.go  security.go  security_test.go  types.go  types_test.go  utils.go
pkg/services/rabbitmq/: client.go  constants.go  management.go  operations.go  types.go
pkg/services/redis/: client.go  constants.go  (+3 more)
pkg/testutil/: integration_mock_bosh.go  integration_mock_vault.go  mock_bosh.go  mock_logger.go  mock_vault.go  vault_dev_server.go  vault_dev_server_test.go
pkg/utils/: types.go  utils.go
pkg/vault/: client.go  client_test.go  constants.go  errors.go  history.go  history_test.go  index.go  types.go
services/: models.go  services.go  services_test.go
services/rabbitmq/: constants.go  plugins_audit.go  plugins_audit_test.go  plugins_executor.go  plugins_executor_test.go  plugins_metadata.go  plugins_metadata_test.go  rabbitmqctl_audit.go  rabbitmqctl_executor.go  rabbitmqctl_metadata.go  ssh_service.go
shield/: BUILD.bazel  shield.go
ui/: blacksmith.css  blacksmith.js  index.html  lens.js  tailwind.css  xterm.min.js
websocket/: constants.go  ssh_handler.go  ws_adapter.go
(+23 files in other folders)
