load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "shield",
    srcs = ["shield.go"],
    importpath = "github.com/blacksmith-community/blacksmith/shield",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pivotal_cf_brokerapi//:brokerapi",
        "@com_github_shieldproject_shield//client/v2/shield",
    ],
)
